# bde

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.html  flax2bnn.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyvenv.cfg  quick_start.html  requirements.txt  search.html  searchindex.js  sg_execution_times.html  test.py  user_guide.html
.github/workflows/: deploy-gh-pages.yml  documentation.yml  lint.yml  python-app.yml  testing.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu
_downloads/ce7a3ad9ec8b6ab67e79dffc2fca92e2/: example01.ipynb
_sources/: api.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_sources/auto_examples/: example01.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: example01.html  index.html  sg_execution_times.html
bde/: __init__.py  flax2bnn.py
bde/ml/: __init__.py  datasets.py  loss.py  models.py  training.py
bde/utils/: __init__.py  configs.py  discovery.py  utils.py
doc/: Makefile  api.md  api.rst  conf.py  index.rst  make.bat  quick_start.rst  user_guide.rst
doc/_static/img/: logo.psd
doc/source/: bde.ml.rst  bde.rst  bde.utils.rst
docs/: api.md  bde.rst  bde.test.rst  conf.py  index.rst  modules.rst
docs/source/: bde.rst
examples/: README.txt  example01.py
source/: bde.html  bde.ml.html  bde.utils.html
testdocwithapi/: conf.py
tests/: conftest.py  pytest.ini
tests/test_ml/test_datasets/: test_dataset_wrapper.py
tests/test_ml/test_loss/: test_log_likelihood_loss.py  test_mse_loss.py
tests/test_ml/test_models/: test_bde_estimator.py  test_estimators_general.py  test_fully_connected_estimator.py  test_fully_connected_module.py
tests/test_ml/test_training/: test_jitted_training.py  test_jitted_training_epoch.py  test_jitted_training_over_batch.py  test_train_step.py
tests/test_utils/test_utils/: test_apply_to_multilayer_data.py
